<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Butt Dialed</string>
    <string name="about">About</string>
    <string name="about_content">
        \u201CButt Dialed\u201D was created by Jason Feinstein after having butt-dialed one too many people.
    </string>
    <string name="copyright">Copyright \u00A9 2013 All Rights Reserved.</string>
    <string name="unknown">Unknown</string>
    <string name="apology_content">Oops! Sorry, that was a butt-dial!</string>
    <string name="sms_confirm_title">Send Butt Dial Apology?</string>
    <string name="confirm_without_name">Do you want to send an apology to {{number}}?</string>
    <string name="confirm_with_name">Do you want to send an apology to {{name}} ({{number}})?</string>
    <string name="send_apology">Send Apology</string>
    <string name="apology_sent_toast">Apology sent!</string>
    <string name="cancel_apology">Don\'t Send</string>
    <string name="prefs_use_default_sms_summary">Use the default SMS app on your android device.\n\nIf you turn this off,
        you will be asked which app to use for SMS sending when you need to apologize for a butt dial.
    </string>
    <string name="prefs_use_default_sms">Use Default SMS App</string>
    <string name="settings">Settings</string>
    <string name="sms_app_chooser_title">Send Apology Via..</string>
    <string name="logo_desc">Logo</string>
    <string name="share">Share This App!</string>
    <string name="share_text">Get the \"Butt Dialed\" app to apologize for butt/pocket dials</string>
    <string name="share_subject">Get \"Butt Dialed\" for your Android Device!</string>
    <string name="prefs_apology_options_screen_title">Apology Message Options</string>
    <string name="prefs_apology_default_message_title">Default Apology</string>
    <string name="prefs_apology_options_screen_summary">Pick your default apology message and add new apology message
        options.
    </string>
    <string name="use_sms_app">Send Apology Via...</string>
    <string name="add_apology_option">Add Apology</string>
    <string name="pref_new_apology_dialog_label">Enter your apology message here:</string>
    <string name="pref_new_apology_hint">Your apology...</string>
    <string name="pref_new_apology_positive_button">Add it!</string>
    <string name="pref_new_apology_negative_button">Cancel</string>
    <string name="pref_default_message_preference_title">Default Apology Message</string>
    <string name="pref_default_message_preference_summary">Select one of the apologies below as your default butt dial
        apology, or click the button to add a new apology option.
    </string>
    <string name="pref_new_apology_dialog_title">Add apology option...</string>
    <string name="pref_remove_apology_dialog_title">Select an apology to remove...</string>
    <string name="remove_apology_option">Remove Apology</string>
    <string name="pref_add_remove_header">Add Or Remove Apology Options</string>
    <string name="pref_add_remove_summary">You can add your own apology options!</string>
    <string name="receiver_label">Outgoing Call Receiver</string>
    <string name="receiver_description">The tool Butt Dialed uses to detect outgoing calls.</string>
    <string name="service_butt_dial_detector_label">Butt Dial Detector Service</string>
    <string name="service_butt_dial_detector_description">Listens for call state and tries to detect butt-dials.
    </string>
    <string name="notification_title">Butt Dialed Noticed A Call</string>
    <string name="notification_text">Click if you think this was a butt dial.</string>
</resources>
