<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/ActivityStyle"
              >
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/about_content"
                android:gravity="left"
                android:drawableLeft="@drawable/ic_launcher"
                android:drawablePadding="20dp"
                />
        <Button
                android:id="@+id/share_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_marginTop="10dp"
                />
    </LinearLayout>
    <TextView
        android:text="@string/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>