<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="15dp"
              android:paddingBottom="15dp"
              >
    <TextView
            android:id="@android:id/title"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@android:id/summary"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <RadioGroup
            android:id="@+id/message_list_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
    </RadioGroup>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D6D7D6"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="7dp"
            />

    <TextView
            android:text="@string/pref_add_remove_header"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/pref_add_remove_summary"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <Button
                android:layout_marginTop="15dp"
                android:id="@+id/add_option_button"
                android:text="@string/add_apology_option"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_marginRight="5dp"
                />
        <Button
                android:layout_marginTop="15dp"
                android:id="@+id/remove_option_button"
                android:text="@string/remove_apology_option"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/btn"
                />
    </LinearLayout>
</LinearLayout>